[metadata]
name = prevent-sleep
url = https://github.com/lhupfeldt/prevent_sleep.git

author = Lars Hupfeldt Nielsen
author_email = lhn@hupfeldtit.dk

description = Prevent sleep/suspend when (active) SSH or NFS clients.
long_description = file: README.rst
long_description_content_type = text/x-rst

license = BSD

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
include_package_data = True
install_requires =
    # Add your dependencies here

python_requires = >= 3.10

packages =
    prevent-sleep

package_dir =
    prevent-sleep = src

[options.extras_require]
dev =
    nox

[aliases]
test = nox
