[metadata]
name = prevent-sleep
url = https://github.com/lhupfeldt/prevent_sleep.git

author = Lars Hupfeldt Nielsen
author_email = lhn@hupfeldtit.dk

description = Prevent sleep/suspend when there are (active) SSH or NFS clients.
long_description = file: README.md
long_description_content_type = text/markdown

license = 'BSD 3-Clause "New" or "Revised" License'

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration
    Topic :: System :: Networking :: Monitoring

[options]
zip_safe = True
install_requires =
    psutil >= 5.9.5
    dbus-python >= 1.3.2
    # Use OS package python3-pystemd instead of 'pystemd' Python package
    # pystemd >= 0.13.2

python_requires = >= 3.10

package_dir=
    prevent_sleep = src
    prevent_sleep.checks = src/checks
    prevent_sleep.inhibitors = src/inhibitors

[options.package_data]
prevent_sleep =
    data/prevent-sleep.service

[options.entry_points]
console_scripts =
    # prevent_sleep entry point name repeated in install_service.py
    prevent-sleep = prevent_sleep.__main__:cli

[options.extras_require]
dev =
    nox

[aliases]
test = nox
